<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.moupass10.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_generator"
        android:name="com.example.moupass10.ui.generator.GeneratorFragment"
        android:label="@string/menu_generator"
        tools:layout="@layout/fragment_generator" />

    <fragment
        android:id="@+id/nav_detector"
        android:name="com.example.moupass10.ui.detector.DetectorFragment"
        android:label="@string/menu_detector"
        tools:layout="@layout/fragment_detector" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.moupass10.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.moupass10.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

</navigation>