<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgBlack">

    <TextView
        android:id="@+id/lblresult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/white"
        android:text="@string/det_result"
        android:textStyle="bold"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="180dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="15sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtUserPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/lblresult"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textNoSuggestions">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/det_userpass"
            android:autofillHints="User Password"
            android:background="@color/txtBgGrey"
            android:drawableStart="@drawable/baseline_password_24"
            android:drawablePadding="20dp"
            android:drawableTint="#A4FFFFFF"
            android:inputType="textNoSuggestions"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/lblIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUserPass"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblIndicator"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ripple"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@color/txtBgGrey"
        android:clickable="true"
        android:text="@string/det_check" />


</RelativeLayout>