<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgBlack"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Form">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MouPass10.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/formToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/mainTheme"
            app:popupTheme="@style/Theme.MouPass10.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="text">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_title"
            android:background="@color/txtBgGrey"
            android:drawableStart="@drawable/baseline_title_24"
            android:drawablePadding="20dp"
            android:drawableTint="#A4FFFFFF"
            android:inputType="text"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="text">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_username"
            android:background="@color/txtBgGrey"
            android:drawableStart="@drawable/baseline_person_24"
            android:drawablePadding="20dp"
            android:drawableTint="#A4FFFFFF"
            android:inputType="text"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUser"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="text"
        app:passwordToggleTint="@color/white"
        app:passwordToggleEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_password"
            android:background="@color/txtBgGrey"
            android:drawableStart="@drawable/baseline_password_24"
            android:drawablePadding="20dp"
            android:drawableTint="#A4FFFFFF"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtWebsite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPass"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="text">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_website"
            android:background="@color/txtBgGrey"
            android:drawableStart="@drawable/baseline_insert_link_24"
            android:drawablePadding="20dp"
            android:drawableTint="#A4FFFFFF"
            android:inputType="text"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtWebsite"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/ripple"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@color/txtBgGrey"
        android:text="@string/form_confirm" />

</RelativeLayout>