<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgBlack"
    tools:context=".Login">

    <!--    <TextView
            android:id="@+id/lblRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="Register"
            android:textColor="@color/white"
            android:textSize="35dp" />-->

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="165dp"
        android:layout_height="144dp"
        android:src="@mipmap/ic_launcher"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtMasterPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        app:passwordToggleTint="@color/white"
        app:passwordToggleEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/res_master"
            android:autofillHints="Master Password"
            android:background="@color/txtBgGrey"
            android:drawableStart="@drawable/baseline_password_24"
            android:drawablePadding="20dp"
            android:drawableTint="#A4FFFFFF"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblForgotPass"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/txtBgGrey"
        android:clickable="true"
        android:text="@string/res_login" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        app:srcCompat="@drawable/baseline_info_24" />

    <TextView
        android:id="@+id/lblForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMasterPass"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:text="@string/res_forgot"
        android:textColor="@color/white" />


</RelativeLayout>