<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgBlack"
    tools:context=".ui.settings.ChangePassword">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MouPass10.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/cpToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/mainTheme"
            app:popupTheme="@style/Theme.MouPass10.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtMasterPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        app:passwordToggleTint="@color/white"
        app:passwordToggleEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/res_master"
            android:autofillHints="Master Password"
            android:background="@color/txtBgGrey"
            android:drawableStart="@drawable/baseline_password_24"
            android:drawablePadding="20dp"
            android:drawableTint="#A4FFFFFF"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtConfirmPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMasterPass"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        app:passwordToggleTint="@color/white"
        app:passwordToggleEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/res_confirm"
            android:autofillHints="Confirm Password"
            android:background="@color/txtBgGrey"
            android:drawableStart="@drawable/baseline_password_24"
            android:drawablePadding="20dp"
            android:drawableTint="#A4FFFFFF"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtConfirmPass"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/ripple"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@color/txtBgGrey"
        android:text="@string/cp_confirm" />

</RelativeLayout>